init-app-server: add ReservedCodeCacheSize setting, and update/tidy